# from-ngram-to-transformer

./: .env.example  .gitignore  PRODUCT.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
configs/: default.yaml  ngram.yaml  transformer_small.yaml
data/corpus/: metadata.json  tiny_corpus.txt
docs/: architecture.md  supabase-setup.md
scripts/: provision-supabase.ts  verify-supabase.ts
src/ngram_transformer/: __init__.py  config.py
src/ngram_transformer/app/: __init__.py  api.py  dependencies.py  generation_history.py  gradio_design.py  gradio_ui.py  main.py  model_service.py  schemas.py
src/ngram_transformer/data/: __init__.py  dataset.py  tokenizer.py
src/ngram_transformer/evaluation/: __init__.py  metrics.py
src/ngram_transformer/infra/: supabase_gateway.py
src/ngram_transformer/ml/: __init__.py  checkpoints.py  ngram.py  sampling.py  transformer.py
src/ngram_transformer/training/: __init__.py  common.py  evaluate.py  train_ngram.py  train_transformer.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260618212126_initial_schema.sql
tests/: test_api.py  test_checkpoints.py  test_config.py  test_ngram.py  test_supabase_local_optional.py  test_supabase_sql.py  test_tokenizer.py  test_transformer.py
