[project]
name = "from-ngram-to-transformer"
version = "0.1.0"
description = "A practical portfolio project showing the evolution from N-gram language models to a small decoder-only Transformer."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Portfolio Project" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "gradio>=5.0,<6.0",
  "httpx>=0.27,<1.0",
  "numpy>=1.26,<3.0",
  "pydantic>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
  "pyyaml>=6.0,<7.0",
  "torch>=2.4,<3.0",
  "uvicorn>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.6,<1.0",
  "types-PyYAML>=6.0,<7.0"
]

[project.scripts]
ngram-transformer-api = "ngram_transformer.app.main:run"
ngram-transformer-train-ngram = "ngram_transformer.training.train_ngram:main"
ngram-transformer-train-transformer = "ngram_transformer.training.train_transformer:main"
ngram-transformer-evaluate = "ngram_transformer.training.evaluate:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
